and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

March 5th, 2014         G.Cosmo (geomdiv-V10-00-00)
- Added missing dependency to graphics_reps.

October 29th, 2013      T.Nikitina (geomdiv-V09-06-04)
- Split G4Polycone into G4GenericPolycone and optimised.
  Coworks with tag "geom-specific-V09-06-22".

August 27th, 2013       G.Cosmo (geomdiv-V09-06-03)
- Added G4Ellipsoid among solids enabled for parameterisation.

March 22nd, 2013        G.Cosmo (geomdiv-V09-06-02)
- Use dynamic instead of static cast in singleton accessor implementation
  for G4PVDivisionFactory.

March 21st, 2013        A.Dotti (geomdiv-V09-06-01)
- Corrected definition of G4PVDivisionFactory singleton accessor for MT.

February 22nd, 2013     G.Cosmo (geomdiv-V09-06-00)
- Cleanup of changes for multi-threading in G4PVDivisionFactory.
- Corrected composed cout in exceptions for G4ParameterisationBox and
  G4ParameterisationTrd.

June 12th, 2012         G.Cosmo (geomdiv-V09-05-01)
- Explicitly use inclusion of headers for system of units and physical
  constants, in plan to remove implicit inclusion from globals.hh.

May 14th, 2012          G.Cosmo (geomdiv-V09-05-00)
- Fixed spurious cases of hidden variable visibility, detected with
  '-Wshadow' compilation option on gcc compiler in G4ParameterisationCons.

August, 11th, 2011      G.Cosmo (geomdiv-V09-04-04, geomdiv-V09-04-03)
- Defined scheme for warnings/errors coding:
  + 1xxx for warnings, 0xxx for errors.
  Code numbering:
  + 0001: not supported or implemented features;
  + 0002: invalid setup/construct;
  + 0003: invalid run condition;
  + 1001: incorrect setup; automatically adapted.
  + 1002: notification.
