@@ -17,6 +17,16 @@ committal in the CVS repository !
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
 
+June 2nd, 2015          G.Cosmo (geomdiv-V10-00-01)
+- Delete rotation matrix in destructor.
+
+June 2nd, 2015          P.Arce
+- Avoid creation/deletion of rotation matrix in G4VDivisionParameterisation
+  for ChangeRotMatrix(). Addressing problem report #1743.
+
+April 30th, 2015        G.Cosmo
+- Fixed Coverity defect in G4ReplicatedSlice for uninitialised pointer.
+
 March 5th, 2014         G.Cosmo (geomdiv-V10-00-00)
 - Added missing dependency to graphics_reps.
 
